docker fixes