@@ -29,4 +29,7 @@ EXPOSE 8080
 ENV SPRING_PROFILES_ACTIVE=prod
 
 # Run the application with optimized JVM flags
-ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=90", "-XX:+AlwaysActAsServerClassMachine", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-XX:+UseContainerSupport",
+"-XX:+AlwaysActAsServerClassMachine",
+"-XX:MaxRAMPercentage=75", "-XX:+UseZGC",
+"-jar", "app.jar"]
